# movie-recsys

./: .black  .dockerignore  .gitignore  .gitmodules  docker-compose.yml  env.example  isort.cfg  pyproject.toml  setup.cfg
custom_user_ratings/: egor_ratings.json
requirements/: dev_requirements.txt
sandbox/: 0. eda.ipynb  1. top_movie_baseline.ipynb  2. ALS.ipynb  3. NCF.ipynb  ALS.ipynb  NCF.ipynb  top_movie_baseline.ipynb
src/: constants.py  grid_search_ALS_hyperparams.py  train_als_u2i.py  train_ncf.py  utils.py
src/recommenders/: als.py  base.py
